[gd_scene load_steps=12 format=3 uid="uid://b7alh3m8x6sbv"]

[ext_resource type="Script" path="res://characters/walking_enemy.gd" id="1_72rld"]
[ext_resource type="Texture2D" uid="uid://lagiydfg4ntn" path="res://assets/art/characters/walking_enemy.png" id="2_4plye"]
[ext_resource type="PackedScene" uid="uid://csisfys2gknmj" path="res://characters/hurtbox.tscn" id="3_emeyn"]
[ext_resource type="PackedScene" uid="uid://bxggdwfegxfie" path="res://characters/hitbox.tscn" id="4_g5uoy"]
[ext_resource type="PackedScene" uid="uid://dcfu0p2itvvs3" path="res://characters/character_stats.tscn" id="5_sjmpq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j3qa1"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o86vc"]
size = Vector2(18, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3petw"]
size = Vector2(12, 9)

[sub_resource type="Animation" id="Animation_8cya3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q0djh"]
resource_name = "move"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lras6"]
_data = {
"RESET": SubResource("Animation_8cya3"),
"move": SubResource("Animation_q0djh")
}

[node name="walking_enemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
floor_constant_speed = true
floor_snap_length = 2.0
script = ExtResource("1_72rld")
speed = 20.0

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("2_4plye")
flip_h = true
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_j3qa1")

[node name="floor_cast" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(0, 12)
collision_mask = 3

[node name="hurtbox" parent="." instance=ExtResource("3_emeyn")]
position = Vector2(0, -5)
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("RectangleShape2D_o86vc")

[node name="hitbox" parent="." instance=ExtResource("4_g5uoy")]
position = Vector2(0, -4)
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_3petw")
debug_color = Color(0.729412, 0.160784, 0.372549, 0.419608)

[node name="character_stats" parent="." instance=ExtResource("5_sjmpq")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lras6")
}
autoplay = "move"

[connection signal="hurt" from="hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="no_health" from="character_stats" to="." method="_on_character_stats_no_health"]
